# NEXUS

./: .antigravityignore  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HIVE.md  Makefile  NEXUS.md  README.md  assets.py  benchmarker.py  config_loader.py  discovery.py  docker-compose.yml  manifest.json  nexus.py  nexus_compat.py  nexus_path.py  nexus_simple_agent.html  package-lock.json  package.json  profiles.py  py.typed  pyproject.toml  session_bus.py  shell.py  soul.md  test_chat.py  tool_adapters.py  train_tools.py  voice_chat.py
authentication/: __init__.py  read.md
cli/: nexus-cli-headless.ts  nexus-cli.tsx  package-lock.json  package.json  read.md  test_cli_e2e.py  test_compile.py  test_runtime.py  tsconfig.json
code_intel/: __init__.py  agent_context.py  diagnostics.py  edit_plan.py  repo_map.py  side_effects.py
cognition/: __init__.py  intent_engine.py  intent_forecaster.py  memory_graph.py
config/: .env.template  .pyre_configuration  config_loader.py  profiles.py  provider.yml  pyproject.toml  pyrightconfig.json  read.md  settings.yml  system.yml  voice.yml
config_loader/: __init__.py
configs/: nexus_config.yaml  profiles.yaml
context/: __init__.py  compressor.py  persistence.py  read.md
core/: config.py  config_loader.py  discovery.py  hive.py  indexer.py  kernel.py  observer.py  permissions.py  prompts.py  router.py  tool_adapters.py  world_model.py
dashboard/: api.py  package-lock.json  package.json
deploy/: Dockerfile  docker-compose.yml
discovery/: __init__.py
docs/: AGENT_CONTEXT.md  AGENT_LOOP.md  ARCHITECTURE.md  BROWSER_AUTOMATION.md  CLI_COMMANDS.md  GUI_ARCHITECTURE.md  HERMES_COMPARISON.md  MCP_CODE_GRAPH.md  MEDIAPIPE_SUITE.md  NEXUS.md  NEXUS_AURORA_NEXTGEN_BLUEPRINT.md  NEXUS_OPTIMIZATION_NEXTGEN_BLUEPRINT.md  NEXUS_UNIFIED_AGENT_ARCHITECTURE.md  NEXUS_WORKFLOW_MODEL.md  PROJECT_MEMORY.md  README.md  ROADMAP.md  ROADMAP_STATUS.md  SPECIAL_FOCUS.md  UNIFIED_GRAPH.md  VOICE_ASSISTANT.md  WORK_EVENTS.md  read.md
evaluation/: __init__.py  benchmark.py
evolution/: __init__.py  context.py  ensemble.py  horizons.py  hyper_kernel.py  intent_engine.py  log.py  log_analyzer.py  omni_kernel.py  read.md  researcher.py  skill_synthesizer.py  status.py
gateway/: __init__.py  base.py  config.json  main.py  read.md  run.py  session_bus_integration.py  telegram_bot.py  webhook_server.py
gui/: __init__.py  api.py  index.html  package-lock.json  package.json  read.md  vite.config.ts
hardware/: __init__.py  manager.py
hive/: __init__.py  engine.py  workers.py
indexer/: __init__.py
integrations/: mcp_server.py  telegram_bot.py
intelligence/: __init__.py  local_brain.py  moa.py  moe_router.py  vocal_core.py
kernel/: __init__.py  read.md
knowledge/: __init__.py  knowledge.json  read.md  vault.json  vault.py
lifecycle/: __init__.py  cron_lifecycle.py  memory_lifecycle.py  plugin_lifecycle.py  read.md  self_improvement_lifecycle.py  skill_lifecycle.py  tool_lifecycle.py  version.py
mcp/: __init__.py  read.md  server.py  tool.py
memory/: memory.json  read.md
models/: read.md
neural/: __init__.py  memory_kernel.py  nerve_center.py  symbolism.py  trainer.py  turbo_quant.py
nexus/: __init__.py  __main__.py  read.md
nexus_compat/: __init__.py
nexus_path/: __init__.py
optimization/: __init__.py  competitive.py  failure_vaccine.py  mission_replay.py  roadmap.py  test_selection.py  unified_graph.py
orchestrators/: architect.py  langchain_agents.py  loop.py  mission_control.py  read.md  workflow_engine.py
os_power/: __init__.py  patch_ledger.py  process_manager.py
permissions/: __init__.py  read.md
plugins/: read.md
prompts/: __init__.py  read.md
providers/: anthropic.py  azure_openai.py  base.py  cohere.py  commandcode.py  deepseek.py  factory.py  fireworks.py  flux_image.py  google_gemini.py  groq.py  (+22 more)
(+829 files in other folders)
