[project]
name = "nexus-ai"
version = "1.0.0"
description = "NEXUS AI - The Operating System of Intelligence"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "rich>=13.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
browser = [
    "playwright>=1.50",
]
vision = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "numpy>=1.26",
]
voice = [
    "accelerate>=0.26",
    "keyboard>=0.13.5",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "torch>=2.2",
    "transformers>=4.35",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]

[project.scripts]
nexus = "nexus:boot"
point = "nexus:boot"
nexus-fix = "nexus:boot"
nexus-mcp = "integrations.mcp_server:main"
nexus-voice = "voice_chat:main"

[tool.setuptools]
py-modules = ["nexus", "shell", "train_tools", "assets", "benchmarker", "voice_chat"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "orchestrators*", "utils*", "tools*", "rag*", "integrations*", "evolution*", "knowledge*"]
exclude = [
    "tests*",
    "dashboard*",
    "models*",
    "skill*",
    "external_skills*",
    "temp_gemini_cli*",
    "workspace*",
    "scratch*",
    "training_data*",
    "data*",
    "tools.terminal*",
    "tools.file_ops*",
    "tools.tester*",
    "tools.git*",
    "tools.docker*",
    "tools.elite*",
    "dashboard.scratch*",
]

[tool.pyright]
include = ["."]
extraPaths = ["."]
typeCheckingMode = "basic"
reportMissingImports = false

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
