[project]
name = "nexus-ai"
version = "1.0.0"
description = "NEXUS AI - The Operating System of Intelligence"
dependencies = [
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "rich>=13.0",
    "requests>=2.31",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
browser = [
    "playwright>=1.50",
]
vision = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "numpy>=1.26",
]
voice = [
    "accelerate>=0.26",
    "keyboard>=0.13.5",
    "numpy>=1.26",
    "sounddevice>=0.4.6",
    "soundfile>=0.12",
    "torch>=2.2",
    "transformers>=4.35",
    "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
]

[project.scripts]
nexus = "nexus:boot"
point = "nexus:boot"
nexus-fix = "nexus:boot"
nexus-mcp = "mcp.server:main"
nexus-voice = "voice_chat:main"

[tool.setuptools]
py-modules = ["nexus", "shell", "voice_chat", "server"]

[tool.setuptools.packages.find]
where = [".."]
include = ["optimization*", "sandbox*", "authentication*", "code_intel*", "cognition*", "context*", "evaluation*", "evolution*", "hardware*", "intelligence*", "neural*", "os_power*", "reasoning*", "safety*", "schema*", "security*", "tasks*", "telemetry*", "voice*", "prompts*", "orchestrators*", "utils*", "tools*", "rag*", "integrations*", "knowledge*", "mcp*", "gateway*", "hive*", "indexer*", "kernel*", "observer*", "permissions*", "router*", "skills*", "stream_filters*", "tool_adapters*", "world_model*", "voice_chat*", "server*"]
exclude = [
    "tests*",
    "gui*",
    "models*",
    "skill*",
    "temp_gemini_cli*",
    "workspace*",
    "scratch*",
    "training_data*",
    "data*",
    "tools.terminal*",
    "tools.file_ops*",
    "tools.tester*",
    "tools.git*",
    "tools.docker*",
    "tools.elite*",
    "gui.scratch*",
]
